# Switch-KD

./: .dockerignore  .gitignore  README.md  docker-compose.mixed-precision.yaml  pyproject.toml  switch-logits_identity_validation.txt
configs/: base_switch_kd.yaml  grounding_mock.yaml  grounding_test.yaml  hf_vlm.yaml  mock.yaml  parsing_evaluate.yaml  parsing_evaluate_base3b.yaml  parsing_labeling.yaml  parsing_mock.yaml  parsing_response_distillation.yaml  parsing_response_pred.yaml  parsing_sft_debug.yaml  parsing_switch_kd.yaml  parsing_switch_kd_1080p_lora_bf16.yaml  parsing_switch_kd_32b_to_8b.yaml  parsing_switch_kd_7B_to_3B.yaml  parsing_switch_kd_ddp.yaml  parsing_switch_kd_infer.yaml  parsing_switch_kd_pred.yaml  parsing_switch_kd_test.yaml  qwen3vl8b_r16_attn.yaml  qwen3vl8b_r16_attn_mlp.yaml  qwen3vl8b_r16_attn_projector_trainable.yaml  qwen3vl8b_r16_attn_projector_trainable_smoke.yaml  qwen3vl8b_r32_attn.yaml  qwen3vl8b_r32_attn_mlp.yaml  qwen3vl8b_r32_attn_mlp_bounded20.yaml  qwen3vl8b_r32_attn_projector_trainable.yaml  screen_parsing_mock.yaml  screen_parsing_test.yaml  stage1_b0_r16_attn_all_layers.yaml  stage1_b0_r16_attn_layers_0_35.yaml  stage1_b1_r16_attn_layers_12_35.yaml  stage1_b1_r16_attn_layers_12_35_smoke.yaml  stage1_b2_r16_attn_layers_24_35.yaml  stage1_b2_r16_attn_layers_24_35_smoke.yaml  switch_kd_4060ti.yaml  switch_kd_smoke.yaml
docker/: Dockerfile.mixed-precision
docs/: docker_mixed_precision_inference.md  project_progress.md  switch_kd_4060ti.md  vram_profile_usage.md
examples/: grounding_manifest.jsonl  manifest.jsonl  (+2 more)
(+220 files in other folders)
