[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-distill"
version = "0.1.0"
description = "A clean VLM model distillation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30.0",
  "datasets>=2.19.0",
  "jsonlines>=4.0.0",
  "peft>=0.11.0",
  "pillow>=10.0.0",
  "pyyaml>=6.0.1",
  "torch>=2.2.0",
  "transformers>=4.45.0",
]

[project.optional-dependencies]
serve = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "bitsandbytes",
  "qwen-vl-utils",
]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.0",
]

[project.scripts]
vlm-distill = "vlm_distill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
markers = [
  "integration: tests requiring local model weights and accelerator hardware",
]
